--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-scripts": "5.0.1",
     "redux": "^5.0.1",
     "redux-promise": "^0.6.0",
+    "redux-thunk": "^3.1.0",
     "web-vitals": "^4.2.4"
   },
   "scripts": {
